control/plasma_cf90.F90


      interface
         function PLASMA_cgecon_Tile_c(norm,A,anorm,rcond) &
          & bind(c, name='PLASMA_cgecon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgecon_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_cgecon_Tile_c
      end interface

      interface
         function PLASMA_cgelqf_Tile_c(A,T) &
          & bind(c, name='PLASMA_cgelqf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgelqf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_cgelqf_Tile_c
      end interface

      interface
         function PLASMA_cgelqs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_cgelqs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgelqs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_cgelqs_Tile_c
      end interface

      interface
         function PLASMA_cgels_Tile_c(trans,A,T,B) &
          & bind(c, name='PLASMA_cgels_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgels_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_cgels_Tile_c
      end interface

      interface
         function PLASMA_cgemm_Tile_c(transA,transB,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_cgemm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgemm_Tile_c
            integer(kind=c_int), value :: transA
            integer(kind=c_int), value :: transB
            complex(kind=c_float_complex), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            complex(kind=c_float_complex), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_cgemm_Tile_c
      end interface

      interface
         function PLASMA_cgeqp3_Tile_c(A,jpvt,tau,work,rwork) &
          & bind(c, name='PLASMA_cgeqp3_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgeqp3_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: jpvt
            type(c_ptr), value :: tau
            type(c_ptr), value :: work
            type(c_ptr), value :: rwork
          end function PLASMA_cgeqp3_Tile_c
      end interface

      interface
         function PLASMA_cgeqrf_Tile_c(A,T) &
          & bind(c, name='PLASMA_cgeqrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgeqrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
          end function PLASMA_cgeqrf_Tile_c
      end interface

      interface
         function PLASMA_cgeqrs_Tile_c(A,T,B) &
          & bind(c, name='PLASMA_cgeqrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgeqrs_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: T
            type(c_ptr), value :: B
          end function PLASMA_cgeqrs_Tile_c
      end interface

      interface
         function PLASMA_cgesdd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_cgesdd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgesdd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_cgesdd_Tile_c
      end interface

      interface
         function PLASMA_cgesv_Tile_c(A,IPIV,B) &
          & bind(c, name='PLASMA_cgesv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgesv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_cgesv_Tile_c
      end interface

      interface
         function PLASMA_cgesv_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_cgesv_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgesv_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_cgesv_incpiv_Tile_c
      end interface

      interface
         function PLASMA_cgesvd_Tile_c(jobu,jobvt,A,S,T,U,LDU,VT,LDVT) &
          & bind(c, name='PLASMA_cgesvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgesvd_Tile_c
            integer(kind=c_int), value :: jobu
            integer(kind=c_int), value :: jobvt
            type(c_ptr), value :: A
            type(c_ptr), value :: S
            type(c_ptr), value :: T
            type(c_ptr), value :: U
            integer(kind=c_int), value :: LDU
            type(c_ptr), value :: VT
            integer(kind=c_int), value :: LDVT
          end function PLASMA_cgesvd_Tile_c
      end interface

      interface
         function PLASMA_cgetrf_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_cgetrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrf_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_cgetrf_Tile_c
      end interface

      interface
         function PLASMA_cgetrf_incpiv_Tile_c(A,L,IPIV) &
          & bind(c, name='PLASMA_cgetrf_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrf_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
          end function PLASMA_cgetrf_incpiv_Tile_c
      end interface

      interface
         function PLASMA_cgetrf_nopiv_Tile_c(A) &
          & bind(c, name='PLASMA_cgetrf_nopiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrf_nopiv_Tile_c
            type(c_ptr), value :: A
          end function PLASMA_cgetrf_nopiv_Tile_c
      end interface

      interface
         function PLASMA_cgetrf_tntpiv_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_cgetrf_tntpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrf_tntpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_cgetrf_tntpiv_Tile_c
      end interface

      interface
         function PLASMA_cgetri_Tile_c(A,IPIV) &
          & bind(c, name='PLASMA_cgetri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetri_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
          end function PLASMA_cgetri_Tile_c
      end interface

      interface
         function PLASMA_cgetrs_Tile_c(trans,A,IPIV,B) &
          & bind(c, name='PLASMA_cgetrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrs_Tile_c
            integer(kind=c_int), value :: trans
            type(c_ptr), value :: A
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_cgetrs_Tile_c
      end interface

      interface
         function PLASMA_cgetrs_incpiv_Tile_c(A,L,IPIV,B) &
          & bind(c, name='PLASMA_cgetrs_incpiv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cgetrs_incpiv_Tile_c
            type(c_ptr), value :: A
            type(c_ptr), value :: L
            type(c_ptr), value :: IPIV
            type(c_ptr), value :: B
          end function PLASMA_cgetrs_incpiv_Tile_c
      end interface

      interface
         function PLASMA_cheev_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_cheev_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cheev_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_cheev_Tile_c
      end interface

      interface
         function PLASMA_cheevd_Tile_c(jobz,uplo,A,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_cheevd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cheevd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_cheevd_Tile_c
      end interface

      interface
         function PLASMA_cheevr_Tile_c(jobz,range,uplo,A,vl,vu,il,iu,abstol,nbcomputedeig,W,T,Q,LDQ) &
          & bind(c, name='PLASMA_cheevr_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_cheevr_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: range
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_float), value :: vl
            real(kind=c_float), value :: vu
            integer(kind=c_int), value :: il
            integer(kind=c_int), value :: iu
            real(kind=c_float), value :: abstol
            type(c_ptr), value :: nbcomputedeig
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_cheevr_Tile_c
      end interface

      interface
         function PLASMA_chegst_Tile_c(itype,uplo,A,B) &
          & bind(c, name='PLASMA_chegst_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chegst_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_chegst_Tile_c
      end interface

      interface
         function PLASMA_chegv_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_chegv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_chegv_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_chegv_Tile_c
      end interface
